# crazycpp

./: README.md
20141016-constexprstr/: .cproject  .project  CMakeLists.txt  README.md
20141016-constexprstr/include/: istr.hpp  string.hpp
20141016-constexprstr/src/: CMakeLists.txt  fizz.cpp
20141016-constexprstr/test/: CMakeLists.txt  istr.cpp  string.cpp
expression-templates/: .cproject  .project  CMakeLists.txt
expression-templates/include/: matrix.hpp
expression-templates/test/: CMakeLists.txt  matrix.cpp
